package contenedor;

import org.springframework.stereotype.Controller;

@Controller
public class ContenedorController {
}
