package contenedor;

import jakarta.persistence.Entity;

@Entity
public class ContenedorOrganico extends Contenedor{

    public ContenedorOrganico() {
        super();
    }
}
