package contenedor;

import jakarta.persistence.Entity;

@Entity
public class ContenedorPlastico extends Contenedor{

    public ContenedorPlastico() {
        super();
    }
}
