package contenedor;

import org.springframework.stereotype.Service;

@Service
public class ContenedorService {
}
