package residuo;

import jakarta.persistence.Column;
import org.springframework.stereotype.Controller;

@Controller
public class ResiduoController {
}
