package residuo;

import org.springframework.stereotype.Service;

@Service
public class ResiduoService {

}
